Done login LDAP

--- a/env.sample
+++ b/env.sample
@@ -1,1 +1,11 @@
-API_URL=
+# LDAP Configuration | ssh -N -L 127.0.0.1:1389:172.16.220.207:389 tanmv@10.0.20.254
+LDAP__SERVER=ldap://127.0.0.1
+LDAP__PORT=1389
+LDAP__BASEDN=DC=nextpay,DC=local
+LDAP__UPN_SUFFIX=nextpay.local
+
+# LDAPS Configuration | ssh -N -L 127.0.0.1:1636:172.16.220.207:636 tanmv@10.0.20.254
+LDAP__SERVER=ldaps://127.0.0.1
+LDAP__PORT=1636
+LDAP__BASEDN=DC=nextpay,DC=local
+LDAP__UPN_SUFFIX=nextpay.local
