--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev:import": "ts-node src/import.ts",
+    "dev:chat": "ts-node src/chat.ts",
     "start": "node dist/index.js",
     "clean": "rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -22,6 +24,7 @@
   "author": "tanmv",
   "license": "ISC",
   "devDependencies": {
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
@@ -29,10 +32,15 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "mammoth": "^1.11.0",
+    "mongoose": "^9.0.0",
+    "openai": "^6.9.1",
+    "uuid": "^13.0.0"
   }
 }
