--- a/env.sample
+++ b/env.sample
@@ -2,4 +2,4 @@ OPENAI_API_KEY=sk-proj-sdK...
 OPENAI_EMBED_MODEL=text-embedding-3-small
 OPENAI_RAG_MODEL=gpt-4.1-mini
 
-MONGODB_URI=mongodb://127.0.0.1:27017/rag
+REDIS_URI=redis://localhost:6379
