--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "mammoth": "^1.11.0",
-    "mongoose": "^9.0.0",
     "openai": "^6.9.1",
+    "redis": "^5.10.0",
     "uuid": "^13.0.0"
   }
 }
