--- a/env.sample
+++ b/env.sample
@@ -2,4 +2,4 @@ OPENAI_API_KEY=sk-proj-sdK...
 OPENAI_EMBED_MODEL=text-embedding-3-small
 OPENAI_RAG_MODEL=gpt-4.1-mini
 
-MONGODB_URI=mongodb://127.0.0.1:27017/rag
+MONGODB_URI=mongodb+srv://<your_username>:<your_password>@cluster0.zxfth11.mongodb.net/ai-study?appName=Cluster0
