--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "dotenv": "^17.2.3",
     "mammoth": "^1.11.0",
     "mongoose": "^9.0.0",
-    "openai": "^6.9.1",
-    "uuid": "^13.0.0"
+    "openai": "^6.9.1"
   }
 }
