--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "ts-node src/index.ts",
+    "dev:watch": "ts-node-dev --respawn --transpile-only src/index.ts",
     "start": "node dist/index.js",
     "clean": "rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -33,7 +34,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@openai/agents": "^0.3.3",
+    "@openai/agents": "^0.3.7",
     "dotenv": "^17.2.3"
   }
 }
