--- a/env.sample
+++ b/env.sample
@@ -1,1 +1,8 @@
-API_URL=
+OPENAI_API_KEY=sk-proj-sdK
+OPENAI_IMAGE_ANALYTICS_MODEL=gpt-5-mini
+
+R2_ACCOUNT_ID=
+R2_BUCKET=rag-docx
+R2_ACCESS_KEY=
+R2_SECRET_KEY=
+R2_PUBLIC_DOMAIN=https://rag-docx.hpscamera.com
