--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "ts-node src/index.ts",
+    "dev:watch": "ts-node-dev --respawn --transpile-only src/index.ts",
     "start": "node dist/index.js",
     "clean": "rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,6 +24,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "@types/turndown": "^5.0.6",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
     "eslint": "^8.57.1",
@@ -33,6 +35,12 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "dotenv": "^17.2.3"
+    "@aws-sdk/client-s3": "^3.958.0",
+    "@types/uuid": "^10.0.0",
+    "dotenv": "^17.2.3",
+    "mammoth": "^1.11.0",
+    "openai": "^6.15.0",
+    "turndown": "^7.2.2",
+    "uuid": "^13.0.0"
   }
 }
