--- a/env.sample
+++ b/env.sample
@@ -1,1 +1,5 @@
-API_URL=
+MQTT_SERVER=mqtts://07909844444a45f48c20eeabf661a5d7.s1.eu.hivemq.cloud:8883
+MQTT_USERNAME_PUB=tanmvPub
+MQTT_PASSWORD_PUB=
+MQTT_USERNAME_SUB=tanmvSub
+MQTT_PASSWORD_SUB=
