--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "mqtt": "^5.14.1"
   }
 }
