--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "tanmv",
   "license": "ISC",
   "devDependencies": {
+    "@types/amqplib": "^0.10.8",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
@@ -34,6 +35,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "amqplib": "^0.10.9",
     "dotenv": "^17.2.3"
   }
 }
